# git_report

./: .gitignore  README.md  pyproject.toml
lightning_logs/version_0/: metrics.csv
lightning_logs/version_0/checkpoints/: epoch=4-step=4690.ckpt
src/: config.py  data.py  model.py  train.py
tests/: test_model.py
