[project]
name = "git_report"
version = "0.1.0"
description = "PyTorch Lightning demo improved with uv, typing, and pytest"
requires-python = ">=3.10"
dependencies = [
    "pytorch-lightning>=2.6.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
